--- a/3.html
+++ b/3.html
@@ -28,8 +28,8 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Ek aur baar Soch le! 😣</h1>
-      <p>kyu aisa kr rahi hai 😣</p>
+      <h1>Phirse Soch 😣</h1>
+      <p>Aise na tadpao Pookie 😣</p>
 
       <div class="btn">
         <a href="5.html">Yes</a>
