--- a/4.html
+++ b/4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Her Out</title>
+    <title>Tu Meri Hai</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -30,12 +30,12 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Manja na! Kitna bhav khaegi 😭</h1>
-      <p>bht glt baat hai 😭</p>
+      <h1>Bhaoo mat kha! Mujhe kha le pookie 😭</h1>
+      <p>Aacha baat mnhi hai ye 😭</p>
 
       <div class="btn">
         <a href="5.html">Yes</a>
-        <a href="#" id="move-random">No</a>
+        <a href="#" id="move-random">No🥲</a>
       </div>
     </div>
 
