--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ask Her Out</title>
+    <title>Tu Meri Hai</title>
 
     <link rel="stylesheet" href="./style.css" />
   </head>
@@ -22,11 +22,11 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>DO you love me? 🤗</h1>
-      <p>~mai tera hi hoo</p>
+      <h1>Kya tum meri bacchon ki maa banogii? Pookie 🤗</h1>
+      <p>Mai tera tero</p>
       <div class="btn">
         <a href="5.html">Yes</a>
-        <a href="2.html" >No</a>
+        <a href="2.html" >No(🥲)</a>
       </div>
     </div>
   </body>
