--- a/2.html
+++ b/2.html
@@ -25,8 +25,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>Soch le ache se! 🙄</h1>
-      <p>itte jldi nhi mtt bol🙄</p>
+      <h1>Time Leke Soch 🙄</h1>
+      <p>Mujhe Lpi Jaldi Nhi h🙄</p>
 
       <div class="btn">
         <a href="5.html">Yes</a>
