--- a/2.html
+++ b/2.html
@@ -26,7 +26,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>Time Leke Soch 🙄</h1>
-      <p>Mujhe Lpi Jaldi Nhi h🙄</p>
+      <p>Mujhe Koi Jaldi Nhi h🙄</p>
 
       <div class="btn">
         <a href="5.html">Yes</a>
