--- a/4.html
+++ b/4.html
@@ -31,7 +31,7 @@
       ></script>
 
       <h1>Bhaoo mat kha! Mujhe kha le pookie 😭</h1>
-      <p>Aacha baat mnhi hai ye 😭</p>
+      <p>Aacha baat nhi hai ye 😭</p>
 
       <div class="btn">
         <a href="5.html">Yes</a>
